--- a/Simulador Financeiro/Main.css
+++ b/Simulador Financeiro/Main.css
@@ -24,6 +24,7 @@
     bottom: 0%;
     left: 0%;
     right: 0%;
+    opacity: 50%;
 }
 
 .content {
@@ -91,11 +92,13 @@ h1{
     font-size: 32px;
     text-align: center;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
+    color: orange;
 }
 
 .butao{
     background-color: #733A26;
     display: flex;
+    margin-top: 16px;
     margin-right: auto;
     margin-left: auto;
     width: auto;
@@ -111,4 +114,11 @@ h1{
 
 .butao:hover {
     background-color: #86422a;
+}
+
+.mensagem {
+    margin-top: 32px;
+    color: white;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+    padding: 16px;
 }
