--- a/Simulador Financeiro/Main.css
+++ b/Simulador Financeiro/Main.css
@@ -54,7 +54,7 @@ body {
     padding: 0%;
 }
 
-input{
+input {
     /* Colocando o máximo que o label e o input pode oferecer dentro do content */
     width: -webkit-fill-available;
     padding: 8px 16px;
@@ -65,23 +65,24 @@ input{
     background-color: rgb(245, 239, 239);
 }
 
-input:focus-visible, input:active{
+input:focus-visible,
+input:active {
     background-color: white;
     /* Tirar a borda que aparece ao clicar no input */
     outline: unset;
 }
 
-input::placeholder{
+input::placeholder {
     /* Texto dentro do input que aparece antes de alguma escrita */
     opacity: 70%;
 }
 
-input:hover{
+input:hover {
     /* Ao passar o mouse em cima, a cor do hover predomina */
     background-color: white;
 }
 
-label{
+label {
     font-size: 20px;
     width: 100%;
     display: flex;
@@ -90,11 +91,11 @@ label{
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 
-.input{
+.input {
     margin-bottom: 24px;
 }
 
-h1{
+h1 {
     margin-bottom: 32px;
     font-size: 32px;
     text-align: center;
@@ -102,7 +103,7 @@ h1{
     color: orange;
 }
 
-.butao{
+.butao {
     background-color: #733A26;
     display: flex;
     margin-top: 16px;
